--- a/portfolio project/bootstrap-prestructure.html
+++ b/portfolio project/bootstrap-prestructure.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="header">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4 container-fluid">
                 <nav class="navbar navbar-default">
@@ -29,122 +29,122 @@
                 <h4>Through My Looking Glass...</h4>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <hr>
+        <div class="row">
+            <div class="col-xs-12">
+                <hr>
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12 center-block container-fluid">
-            <img class="img-responsive banner" src="images/portfolio-banner-bike-1140px.jpg" alt="bicycle banner photo">
+        <div class="row">
+            <div class="col-xs-12 center-block container-fluid">
+                <img class="img-responsive banner" src="images/portfolio-banner-bike-1140px.jpg" alt="bicycle banner photo">
+            </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-xs-12">
-            <h2 class="text-muted">Featured Work</h2>
+        <div class="row">
+            <div class="col-xs-12">
+                <h2 class="text-muted">Featured Work</h2>
+            </div>
         </div>
-    </div>
-    <div class="row portfolio text-center">
-        <div class="col-md-3">
-            <img class="img-responsive img-featured" src="images/portfolio3.jpg" alt="portfolio image 1" data-toggle="modal" data-target="#project1">
-            <h3>Stanford</h3>
-            <p><a href="http://github.com/farrin">Github Portfolio</a>
+        <div class="row portfolio text-center">
+            <div class="col-md-3">
+                <img class="img-responsive img-featured" src="images/portfolio3.jpg" alt="portfolio image 1" data-toggle="modal" data-target="#project1">
+                <h3>Stanford</h3>
+                <p><a href="http://github.com/farrin">Github Portfolio</a>
+                </p>
+            </div>
+            <div class="col-md-3">
+                <img class="img-responsive img-featured" src="images/portfolio5.jpg" alt="portfolio image 2" data-toggle="modal" data-target="#project2">
+                <h3>Midwestern Still Life</h3>
+                <p><a href="http://github.com/farrin">Github Portfolio</a>
+                </p>
+            </div>
+            <div class="col-md-3">
+                <img class="img-responsive img-featured" src="images/willy-wonkas-salvage-yard.jpg" alt="portfolio image 3" data-toggle="modal" data-target="#project3">
+                <h3>Willy Wonka's Junkyard: City Museum</h3>
+                <p><a href="http://github.com/farrin">Github Portfolio</a>
+                </p>
+            </div>
+            <div class="col-md-3">
+                <img class="img-responsive img-featured" src="images/keystone_camera.jpg" alt="portfolio image 4" data-toggle="modal" data-target="#project4">
+                <h3>Found</h3>
+                <p><a href="http://github.com/farrin">Github Portfolio</a>
+                </p>
+            </div>
+        </div>
+        <div id="footer">
+            <p>This is a current work-in-progress portfolio. Please check back for updates!
             </p>
         </div>
-        <div class="col-md-3">
-            <img class="img-responsive img-featured" src="images/portfolio5.jpg" alt="portfolio image 2" data-toggle="modal" data-target="#project2">
-            <h3>Midwestern Still Life</h3>
-            <p><a href="http://github.com/farrin">Github Portfolio</a>
-            </p>
-        </div>
-        <div class="col-md-3">
-            <img class="img-responsive img-featured" src="images/willy-wonkas-salvage-yard.jpg" alt="portfolio image 3" data-toggle="modal" data-target="#project3">
-            <h3>Willy Wonka's Junkyard: City Museum</h3>
-            <p><a href="http://github.com/farrin">Github Portfolio</a>
-            </p>
-        </div>
-        <div class="col-md-3">
-            <img class="img-responsive img-featured" src="images/keystone_camera.jpg" alt="portfolio image 4" data-toggle="modal" data-target="#project4">
-            <h3>Found</h3>
-            <p><a href="http://github.com/farrin">Github Portfolio</a>
-            </p>
-        </div>
-    </div>
-    <div id="footer">
-        <p>This is a current work-in-progress portfolio. Please check back for updates!
-        </p>
-    </div>
-    <!-- Modal 1-->
-    <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModal1" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModal1">Stanford</h4>
-                </div>
-                <div class="modal-body">
-                    <img class="img-responsive" src="images/portfolio3.jpg" alt="portfolio image 1">
-                    <p>This was my first project in this class. I learned a lot about HTML and CSS. Here are some of my random favorite photos...</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- Modal 1-->
+        <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModal1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModal1">Stanford</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img class="img-responsive" src="images/portfolio3.jpg" alt="portfolio image 1">
+                        <p>This was my first project in this class. I learned a lot about HTML and CSS. Here are some of my random favorite photos...</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Modal 2-->
-    <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModal2" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModal2">Midwestern Still Life</h4>
-                </div>
-                <div class="modal-body">
-                    <img class="img-responsive" src="images/portfolio5.jpg" alt="portfolio image 2">
-                    <p>Just a garage in the life of the Midwest.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Modal 3-->
-    <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModal3" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModal3">Willy Wonka's Junkyard: City Museum</h4>
-                </div>
-                <div class="modal-body">
-                    <img class="img-responsive" src="images/willy-wonkas-salvage-yard.jpg" alt="portfolio image 3">
-                    <p>This is my favorite place in the Midwest! City Museum, St. Louis, MO.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- Modal 2-->
+        <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModal2" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModal2">Midwestern Still Life</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img class="img-responsive" src="images/portfolio5.jpg" alt="portfolio image 2">
+                        <p>Just a garage in the life of the Midwest.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Modal 4-->
-    <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModal4" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title" id="myModal4">Found</h4>
-                </div>
-                <div class="modal-body">
-                    <img class="img-responsive" src="images/keystone_camera.jpg" alt="portfolio image 4">
-                    <p>Old favorite camera. Someday I'm going to get the film processed...</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <!-- Modal 3-->
+        <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModal3" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModal3">Willy Wonka's Junkyard: City Museum</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img class="img-responsive" src="images/willy-wonkas-salvage-yard.jpg" alt="portfolio image 3">
+                        <p>This is my favorite place in the Midwest! City Museum, St. Louis, MO.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- Modal 4-->
+        <div class="modal fade" id="project4" tabindex="-1" role="dialog" aria-labelledby="myModal4" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h4 class="modal-title" id="myModal4">Found</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img class="img-responsive" src="images/keystone_camera.jpg" alt="portfolio image 4">
+                        <p>Old favorite camera. Someday I'm going to get the film processed...</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="js/jquery-1.11.3.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </div>
-    <script src="js/jquery-1.11.3.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
