--- a/portfolio project/bootstrap-prestructure.html
+++ b/portfolio project/bootstrap-prestructure.html
@@ -19,7 +19,7 @@
                 <nav class="navbar navbar-default">
                     <div class="navbar-header">
                         <a class="navbar-brand" href="http://github.com/farrin">
-                            <img alt="Brand" src="images/typewriter-key-f-150px.jpg">
+                            <img alt="Brand" src="images/typewriter-key-f-150px.jpg" class="title-logo">
                         </a>
                     </div>
                 </nav>
@@ -71,8 +71,10 @@
             </div>
         </div>
         <div id="footer">
-            <p>This is a current work-in-progress portfolio. Please check back for updates!
-            </p>
+            <div class="container">
+                <p>This is a current work-in-progress portfolio. Please check back for updates!
+                </p>
+            </div>
         </div>
         <!-- Modal 1-->
         <div class="modal fade" id="project1" tabindex="-1" role="dialog" aria-labelledby="myModal1" aria-hidden="true">
